--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Osinachi Chukwujama<vicraph7@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "airtable": "^0.8.1",
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
