--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
-    "showdown": "^1.9.1"
+    "twilio": "^3.44.0"
   },
   "scripts": {
     "dev": "nodemon src/index.js",
