--- a/package.json
+++ b/package.json
@@ -2,23 +2,37 @@
   "name": "30daysofnode",
   "version": "0.0.1",
   "description": "30 days of node projects",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/vicradon/30daysofnode.git",
   "author": "Osinachi Chukwujama<vicraph7@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.10.1",
     "bcrypt": "^4.0.1",
+    "bluebird": "^3.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "make-runnable": "^1.3.6",
+    "moment": "^2.26.0",
     "mongoose": "^5.9.16",
-    "password-validator": "^5.0.3"
+    "npm-run-all": "^4.1.5",
+    "password-validator": "^5.0.3",
+    "pg": "^8.2.1",
+    "pg-promise": "^5.9.7"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon --watch .",
+    "start": "node src/index.js ."
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babel-watch": "^7.0.0",
     "nodemon": "^2.0.4"
   }
 }
