--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "30daysofnode",
   "version": "0.0.1",
   "description": "30 days of node projects",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/vicradon/30daysofnode.git",
   "author": "Osinachi Chukwujama<vicraph7@gmail.com>",
   "license": "MIT",
@@ -10,12 +10,13 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
     "password-validator": "^5.0.3"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon --watch .",
     "start": "node src/index.js"
   },
   "devDependencies": {
